--- a/css/copy-cat.css
+++ b/css/copy-cat.css
@@ -12,6 +12,7 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: baseline;
   height: 30%;
 }
 
@@ -34,6 +35,7 @@ h5 {
 
 nav {
   width: 40%;
+
 }
 
 main {
